[package]
name = "sudoku"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

#minijinja
minijinja = "2.0.1"

#axum
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.2", features = ["full"] }

#serde
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"

#env 
dotenvy = "0.15.7"